{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 40,
  "lineage": "a7c0f0ff-5ecd-6978-874a-d0a64785d34e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eipnata",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a9d61bb6cf2b8a70",
            "domain": "vpc",
            "id": "eipalloc-073439d2358d007f8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e38960b489e9022d",
            "private_dns": "ip-10-10-1-48.ec2.internal",
            "private_ip": "10.10.1.48",
            "public_dns": "ec2-52-44-85-45.compute-1.amazonaws.com",
            "public_ip": "52.44.85.45",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eipnatb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0dc479d1a9d945a64",
            "domain": "vpc",
            "id": "eipalloc-0cdcb88cbadd09b6b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-097ace1ac455d3fc3",
            "private_dns": "ip-10-10-2-190.ec2.internal",
            "private_ip": "10.10.2.190",
            "public_dns": "ec2-23-22-88-33.compute-1.amazonaws.com",
            "public_ip": "23.22.88.33",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503785734568:internet-gateway/igw-0e8f51370bfef5585",
            "id": "igw-0e8f51370bfef5585",
            "owner_id": "503785734568",
            "tags": {
              "Name": "igw-vpc"
            },
            "tags_all": {
              "Name": "igw-vpc"
            },
            "vpc_id": "vpc-078877759bceb05bd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:503785734568:loadbalancer/app/tf-lb-20210716182358675800000005/04fdbf67ab7f94ec",
            "arn_suffix": "app/tf-lb-20210716182358675800000005/04fdbf67ab7f94ec",
            "dns_name": "tf-lb-20210716182358675800000005-1798534510.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:503785734568:loadbalancer/app/tf-lb-20210716182358675800000005/04fdbf67ab7f94ec",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20210716182358675800000005",
            "security_groups": [
              "sg-0cff5e4fe352c9c1b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0173280b2235c1236"
              },
              {
                "subnet_id": "subnet-03d914e2c9a81c5e8"
              }
            ],
            "subnets": [
              "subnet-0173280b2235c1236",
              "subnet-03d914e2c9a81c5e8"
            ],
            "vpc_id": "vpc-078877759bceb05bd",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_subnet.publicsubnetb",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_security_group.alb_security_group",
            "aws_subnet.publicsubneta"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ALBListenerHTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:503785734568:listener/app/tf-lb-20210716182358675800000005/04fdbf67ab7f94ec/6af7b72f9cb9c368",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:503785734568:listener/app/tf-lb-20210716182358675800000005/04fdbf67ab7f94ec/6af7b72f9cb9c368",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:503785734568:loadbalancer/app/tf-lb-20210716182358675800000005/04fdbf67ab7f94ec",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_lb.alb",
            "aws_security_group.alb_security_group",
            "aws_subnet.publicsubneta",
            "aws_subnet.publicsubnetb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ALBListenerHTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:503785734568:listener/app/tf-lb-20210716182358675800000005/04fdbf67ab7f94ec/6f37732945194899",
            "certificate_arn": "arn:aws:acm:us-east-1:503785734568:certificate/c94fe732-efc9-4960-91c1-1bdcdd662d82",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:503785734568:targetgroup/test/07f98107d00c55c9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:503785734568:listener/app/tf-lb-20210716182358675800000005/04fdbf67ab7f94ec/6f37732945194899",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:503785734568:loadbalancer/app/tf-lb-20210716182358675800000005/04fdbf67ab7f94ec",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "tls_private_key.self",
            "tls_self_signed_cert.self",
            "aws_lb.alb",
            "aws_lb_target_group.target_group",
            "aws_security_group.alb_security_group",
            "aws_acm_certificate.self",
            "aws_subnet.publicsubneta",
            "aws_subnet.publicsubnetb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:503785734568:targetgroup/test/07f98107d00c55c9",
            "arn_suffix": "targetgroup/test/07f98107d00c55c9",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:503785734568:targetgroup/test/07f98107d00c55c9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "test",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-078877759bceb05bd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgatewaysubneta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073439d2358d007f8",
            "id": "nat-0edfee30ae85b015d",
            "network_interface_id": "eni-0e38960b489e9022d",
            "private_ip": "10.10.1.48",
            "public_ip": "52.44.85.45",
            "subnet_id": "subnet-03d914e2c9a81c5e8",
            "tags": {
              "Name": "NAT Gateway 1"
            },
            "tags_all": {
              "Name": "NAT Gateway 1"
            }
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_eip.eipnata",
            "aws_subnet.publicsubneta"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgatewaysubnetb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdcb88cbadd09b6b",
            "id": "nat-04fe65e7ef1dc275a",
            "network_interface_id": "eni-097ace1ac455d3fc3",
            "private_ip": "10.10.2.190",
            "public_ip": "23.22.88.33",
            "subnet_id": "subnet-0173280b2235c1236",
            "tags": {
              "Name": "NAT Gateway 2"
            },
            "tags_all": {
              "Name": "NAT Gateway 2"
            }
          },
          "dependencies": [
            "aws_eip.eipnatb",
            "aws_subnet.publicsubnetb",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "routeigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e8f51370bfef5585",
            "id": "r-rtb-0cbcaf3958e2a421d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cbcaf3958e2a421d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.routetablepublic",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "routenatgatewaya",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-072b726dcf8168dd91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0edfee30ae85b015d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-072b726dcf8168dd9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.natgatewaysubneta",
            "aws_route_table.routetableprivatea",
            "aws_subnet.publicsubneta",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_eip.eipnata"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "routenatgatewayb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-034d55b33270cfb871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04fe65e7ef1dc275a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-034d55b33270cfb87",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eipnatb",
            "aws_nat_gateway.natgatewaysubnetb",
            "aws_route_table.routetableprivateb",
            "aws_subnet.publicsubnetb",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetableprivatea",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503785734568:route-table/rtb-072b726dcf8168dd9",
            "id": "rtb-072b726dcf8168dd9",
            "owner_id": "503785734568",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0edfee30ae85b015d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route A"
            },
            "tags_all": {
              "Name": "Private Route A"
            },
            "vpc_id": "vpc-078877759bceb05bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetableprivateb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503785734568:route-table/rtb-034d55b33270cfb87",
            "id": "rtb-034d55b33270cfb87",
            "owner_id": "503785734568",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04fe65e7ef1dc275a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route B"
            },
            "tags_all": {
              "Name": "Private Route B"
            },
            "vpc_id": "vpc-078877759bceb05bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetablepublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503785734568:route-table/rtb-0cbcaf3958e2a421d",
            "id": "rtb-0cbcaf3958e2a421d",
            "owner_id": "503785734568",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8f51370bfef5585",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route"
            },
            "tags_all": {
              "Name": "Public Route"
            },
            "vpc_id": "vpc-078877759bceb05bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeassocprivatea",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06387556ae81d1def",
            "route_table_id": "rtb-072b726dcf8168dd9",
            "subnet_id": "subnet-0679706bd01a2c0c6"
          },
          "dependencies": [
            "aws_route_table.routetableprivatea",
            "aws_subnet.privatesubneta",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeassocprivateb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093f1b945d5401af8",
            "route_table_id": "rtb-034d55b33270cfb87",
            "subnet_id": "subnet-0869b0c8822fca95e"
          },
          "dependencies": [
            "aws_route_table.routetableprivateb",
            "aws_subnet.privatesubnetb",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeassocpublica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d90daf10faabb1df",
            "route_table_id": "rtb-0cbcaf3958e2a421d",
            "subnet_id": "subnet-03d914e2c9a81c5e8"
          },
          "dependencies": [
            "aws_route_table.routetablepublic",
            "aws_subnet.publicsubneta",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeassocpublicb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efcadbb4999f2600",
            "route_table_id": "rtb-0cbcaf3958e2a421d",
            "subnet_id": "subnet-0173280b2235c1236"
          },
          "dependencies": [
            "aws_route_table.routetablepublic",
            "aws_subnet.publicsubnetb",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503785734568:security-group/sg-0cff5e4fe352c9c1b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cff5e4fe352c9c1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg-20210716182347727400000001",
            "name_prefix": "alb-sg-",
            "owner_id": "503785734568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-078877759bceb05bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503785734568:security-group/sg-00ce94e2f3229c13e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ce94e2f3229c13e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cff5e4fe352c9c1b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg-20210716182349552400000002",
            "name_prefix": "ec2-sg-",
            "owner_id": "503785734568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "tags_all": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-078877759bceb05bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503785734568:security-group/sg-01dea56bec0478955",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01dea56bec0478955",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ce94e2f3229c13e"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "elasticache-sg-20210716182351456000000003",
            "name_prefix": "elasticache-sg-",
            "owner_id": "503785734568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elasticache-sg"
            },
            "tags_all": {
              "Name": "elasticache-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-078877759bceb05bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.ec2_security_group",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubneta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503785734568:subnet/subnet-0679706bd01a2c0c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.20.0/24",
            "id": "subnet-0679706bd01a2c0c6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503785734568",
            "tags": {
              "Name": "Private Subnet A"
            },
            "tags_all": {
              "Name": "Private Subnet A"
            },
            "vpc_id": "vpc-078877759bceb05bd"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnetb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503785734568:subnet/subnet-0869b0c8822fca95e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.30.0/24",
            "id": "subnet-0869b0c8822fca95e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503785734568",
            "tags": {
              "Name": "Private Subnet B"
            },
            "tags_all": {
              "Name": "Private Subnet B"
            },
            "vpc_id": "vpc-078877759bceb05bd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubneta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503785734568:subnet/subnet-03d914e2c9a81c5e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-03d914e2c9a81c5e8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503785734568",
            "tags": {
              "Name": "Public Subnet A"
            },
            "tags_all": {
              "Name": "Public Subnet A"
            },
            "vpc_id": "vpc-078877759bceb05bd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnetb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503785734568:subnet/subnet-0173280b2235c1236",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-0173280b2235c1236",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503785734568",
            "tags": {
              "Name": "Public Subnet B"
            },
            "tags_all": {
              "Name": "Public Subnet B"
            },
            "vpc_id": "vpc-078877759bceb05bd"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503785734568:vpc/vpc-078877759bceb05bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08c052f27102605df",
            "default_route_table_id": "rtb-01ea1bc2a3a1fdfcb",
            "default_security_group_id": "sg-072a0680c18779575",
            "dhcp_options_id": "dopt-61b5bb1b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-078877759bceb05bd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01ea1bc2a3a1fdfcb",
            "owner_id": "503785734568",
            "tags": {
              "Name": "Main VPC"
            },
            "tags_all": {
              "Name": "Main VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}